fix: Call requires API level 35 (current min is 23): `java.util.List#getFirst`